# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  install.bat  temp.txt
dep/include/glad/: glad.h
src/: config.h  glad.c  main.cpp  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: frag.frag  vertex.vert
